// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends.getAlphaSorted 0 1`] = `
Object {
  "A": Array [
    Object {
      "account": Object {
        "accountId": "Checking Account",
        "from": ".",
        "fromMailboxId": "12345",
        "status": 429,
        "to": "./path/to/file",
        "toMailboxId": "v4.0.0-rc.4",
      },
      "activeChat": true,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "^5.0.0",
      "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
      "mailboxId": "c466a48309794261b64a4f02cfcc3d64",
      "name": "Anas",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "accessdenied4u",
      "state": "online",
      "status": "canceled",
      "textilePubkey": "https://api.telegram.org/",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "30615264",
    },
  ],
  "E": Array [
    Object {
      "account": Object {
        "accountId": "Investment Account",
        "from": "./path/to/file",
        "fromMailboxId": "da7588892",
        "status": 200,
        "to": "/path/to/file",
        "toMailboxId": "4.0.0-beta1	",
      },
      "activeChat": false,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "^5.0.0",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": "12345",
      "name": "Edmond",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "accessdenied4u",
      "state": "online",
      "status": "processing",
      "textilePubkey": "https://croplands.org/app/a/reset?token=",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "04079831",
    },
  ],
  "M": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "C:\\\\\\\\path\\\\to\\\\file.ext",
        "fromMailboxId": "c466a48309794261b64a4f02cfcc3d64",
        "status": 404,
        "to": ".",
        "toMailboxId": "1.0.0",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "v1.2.4",
      "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
      "mailboxId": "c466a48309794261b64a4f02cfcc3d64",
      "name": "Michael",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "!Lov3MyPianoPony",
      "state": "online",
      "status": "done",
      "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "07981006",
    },
  ],
  "P": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": ".",
        "fromMailboxId": "bc23a9d531064583ace8f67dad60f6bb",
        "status": 200,
        "to": ".",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": true,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "4.0.0-beta1	",
      "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
      "mailboxId": "c466a48309794261b64a4f02cfcc3d64",
      "name": "Pierre Edouard",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "accessdenied4u",
      "state": "online",
      "status": "pending",
      "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "07981006",
    },
  ],
}
`;

exports[`Friends.getAlphaSorted 1 1`] = `
Object {
  "A": Array [
    Object {
      "account": Object {
        "accountId": "Checking Account",
        "from": "./path/to/file",
        "fromMailboxId": "12345",
        "status": 200,
        "to": ".",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": false,
      "address": "0.0.0.0",
      "badge": "verified",
      "encryptedTextilePubkey": "^5.0.0",
      "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
      "mailboxId": undefined,
      "name": "Anas",
      "pending": true,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "NoWiFi4you",
      "state": "idle",
      "status": undefined,
      "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "07981006",
    },
  ],
  "M": Array [
    Object {
      "account": Object {
        "accountId": "Checking Account",
        "from": "path/to/file.ext",
        "fromMailboxId": "da7588892",
        "status": 400,
        "to": "C:\\\\\\\\path\\\\to\\\\folder\\\\",
        "toMailboxId": "1.0.0",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": "verified",
      "encryptedTextilePubkey": "^5.0.0",
      "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
      "mailboxId": undefined,
      "name": "Michael",
      "pending": true,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "!Lov3MyPianoPony",
      "state": "idle",
      "status": undefined,
      "textilePubkey": "http://base.com",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "30615264",
    },
  ],
}
`;

exports[`Friends.getAlphaSorted 2 1`] = `
Object {
  "A": Array [
    Object {
      "account": Object {
        "accountId": "Home Loan Account",
        "from": "path/to/folder/",
        "fromMailboxId": "12345",
        "status": 404,
        "to": "path/to/folder/",
        "toMailboxId": "4.0.0-beta1	",
      },
      "activeChat": false,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "^5.0.0",
      "item": "[10, -45.9, 103.5, 0.955674]",
      "mailboxId": "12345",
      "name": "Anas",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "!Lov3MyPianoPony",
      "state": "online",
      "status": "completed",
      "textilePubkey": "google.com",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "95430333",
    },
    Object {
      "account": Object {
        "accountId": "Checking Account",
        "from": ".",
        "fromMailboxId": "bc23a9d531064583ace8f67dad60f6bb",
        "status": 500,
        "to": "/path/to/file",
        "toMailboxId": "1.0.0",
      },
      "activeChat": false,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "1.0.0",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": "9876",
      "name": "Anas",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "$p3onyycat",
      "state": "online",
      "status": "draft",
      "textilePubkey": "https://api.telegram.org/bot",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "66167549",
    },
  ],
  "G": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "path/to/file.ext",
        "fromMailboxId": "bc23a9d531064583ace8f67dad60f6bb",
        "status": 200,
        "to": "path/to/file.ext",
        "toMailboxId": "v1.2.4",
      },
      "activeChat": false,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "v1.2.4",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": "bc23a9d531064583ace8f67dad60f6bb",
      "name": "George",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "$p3onyycat",
      "state": "online",
      "status": "completed",
      "textilePubkey": "https://",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "66167549",
    },
  ],
  "J": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "/path/to/file",
        "fromMailboxId": "9876",
        "status": 500,
        "to": "C:\\\\\\\\path\\\\to\\\\file.ext",
        "toMailboxId": "4.0.0-beta1	",
      },
      "activeChat": true,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "1.0.0",
      "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
      "mailboxId": "9876",
      "name": "Jean-Philippe",
      "pending": true,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "YouarenotAllowed2Use",
      "state": "online",
      "status": "completed",
      "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "07981006",
    },
  ],
}
`;

exports[`Friends.getAlphaSorted 3 1`] = `
Object {
  "E": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": ".",
        "fromMailboxId": "da7588892",
        "status": 500,
        "to": "path/to/folder/",
        "toMailboxId": "4.0.0-beta1	",
      },
      "activeChat": false,
      "address": "192.168.1.5",
      "badge": undefined,
      "encryptedTextilePubkey": "1.0.0",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": undefined,
      "name": "Edmond",
      "pending": true,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "!Lov3MyPianoPony",
      "state": "idle",
      "status": "completed",
      "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
      "typingState": "TYPING",
      "unreadCount": undefined,
      "userAccount": "07981006",
    },
  ],
  "M": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "C:\\\\\\\\path\\\\to\\\\file.ext",
        "fromMailboxId": "c466a48309794261b64a4f02cfcc3d64",
        "status": 500,
        "to": "C:\\\\\\\\path\\\\to\\\\folder\\\\",
        "toMailboxId": "v1.2.4",
      },
      "activeChat": true,
      "address": "192.168.1.5",
      "badge": undefined,
      "encryptedTextilePubkey": "4.0.0-beta1	",
      "item": "[10, -45.9, 103.5, 0.955674]",
      "mailboxId": undefined,
      "name": "Michael",
      "pending": false,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "YouarenotAllowed2Use",
      "state": "idle",
      "status": "draft",
      "textilePubkey": "https://croplands.org/app/a/reset?token=",
      "typingState": "TYPING",
      "unreadCount": undefined,
      "userAccount": "95430333",
    },
  ],
  "P": Array [
    Object {
      "account": Object {
        "accountId": "Home Loan Account",
        "from": "C:\\\\\\\\path\\\\to\\\\folder\\\\",
        "fromMailboxId": "c466a48309794261b64a4f02cfcc3d64",
        "status": 404,
        "to": "/path/to/file",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": undefined,
      "encryptedTextilePubkey": "^5.0.0",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": undefined,
      "name": "Pierre Edouard",
      "pending": true,
      "profilePicture": "http://placeimg.com/640/480",
      "publicKey": "!Lov3MyPianoPony",
      "state": "idle",
      "status": "done",
      "textilePubkey": "https://accounts.google.com/o/oauth2/revoke?token=%s",
      "typingState": "TYPING",
      "unreadCount": undefined,
      "userAccount": "04079831",
    },
  ],
}
`;

exports[`Friends.getAlphaSorted 4 1`] = `
Object {
  "E": Array [
    Object {
      "account": Object {
        "accountId": "Checking Account",
        "from": "/path/to/file",
        "fromMailboxId": "9876",
        "status": 200,
        "to": "C:\\\\\\\\path\\\\to\\\\folder\\\\",
        "toMailboxId": "v1.2.4",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "1.0.0",
      "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
      "mailboxId": undefined,
      "name": "Edmond",
      "pending": false,
      "profilePicture": undefined,
      "publicKey": "$p3onyycat",
      "state": "mobile",
      "status": "done",
      "textilePubkey": "https://croplands.org/app/a/reset?token=",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "66167549",
    },
  ],
  "J": Array [
    Object {
      "account": Object {
        "accountId": "Investment Account",
        "from": "/path/to/file",
        "fromMailboxId": "c466a48309794261b64a4f02cfcc3d64",
        "status": 200,
        "to": "/path/to/file",
        "toMailboxId": "4.0.0-beta1	",
      },
      "activeChat": false,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "1.0.0",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": undefined,
      "name": "Jean-Philippe",
      "pending": true,
      "profilePicture": undefined,
      "publicKey": "!Lov3MyPianoPony",
      "state": "mobile",
      "status": "done",
      "textilePubkey": "https://croplands.org/app/a/confirm?t=",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "66167549",
    },
  ],
  "M": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "./path/to/file",
        "fromMailboxId": "12345",
        "status": 429,
        "to": "./path/to/file",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "v4.0.0-rc.4",
      "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
      "mailboxId": undefined,
      "name": "Michael",
      "pending": true,
      "profilePicture": undefined,
      "publicKey": "!Lov3MyPianoPony",
      "state": "mobile",
      "status": "pending",
      "textilePubkey": "http://www.example.com/route/123?foo=bar",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "04079831",
    },
  ],
  "P": Array [
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "path/to/folder/",
        "fromMailboxId": "9876",
        "status": 500,
        "to": "path/to/file.ext",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": true,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "v4.0.0-rc.4",
      "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
      "mailboxId": undefined,
      "name": "Pierre Edouard",
      "pending": false,
      "profilePicture": undefined,
      "publicKey": "accessdenied4u",
      "state": "mobile",
      "status": "draft",
      "textilePubkey": "https://api.telegram.org/bot",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "30615264",
    },
  ],
}
`;

exports[`Friends.getAlphaSorted 5 1`] = `Object {}`;

exports[`Friends.getAlphaSorted 6 1`] = `
Object {
  "-": Array [
    Object {
      "account": Object {
        "accountId": "Checking Account",
        "from": "/path/to/file",
        "fromMailboxId": "9876",
        "status": 200,
        "to": "C:\\\\\\\\path\\\\to\\\\folder\\\\",
        "toMailboxId": "v1.2.4",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "1.0.0",
      "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
      "mailboxId": undefined,
      "name": "",
      "pending": false,
      "profilePicture": undefined,
      "publicKey": "$p3onyycat",
      "state": "mobile",
      "status": "done",
      "textilePubkey": "https://croplands.org/app/a/reset?token=",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "66167549",
    },
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "path/to/folder/",
        "fromMailboxId": "9876",
        "status": 500,
        "to": "path/to/file.ext",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": true,
      "address": "192.168.1.5",
      "badge": "cameraman",
      "encryptedTextilePubkey": "v4.0.0-rc.4",
      "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
      "mailboxId": undefined,
      "name": "",
      "pending": false,
      "profilePicture": undefined,
      "publicKey": "accessdenied4u",
      "state": "mobile",
      "status": "draft",
      "textilePubkey": "https://api.telegram.org/bot",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "30615264",
    },
    Object {
      "account": Object {
        "accountId": "Credit Card Account",
        "from": "./path/to/file",
        "fromMailboxId": "12345",
        "status": 429,
        "to": "./path/to/file",
        "toMailboxId": "^5.0.0",
      },
      "activeChat": true,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "v4.0.0-rc.4",
      "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
      "mailboxId": undefined,
      "name": "",
      "pending": true,
      "profilePicture": undefined,
      "publicKey": "!Lov3MyPianoPony",
      "state": "mobile",
      "status": "pending",
      "textilePubkey": "http://www.example.com/route/123?foo=bar",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "04079831",
    },
    Object {
      "account": Object {
        "accountId": "Investment Account",
        "from": "/path/to/file",
        "fromMailboxId": "c466a48309794261b64a4f02cfcc3d64",
        "status": 200,
        "to": "/path/to/file",
        "toMailboxId": "4.0.0-beta1	",
      },
      "activeChat": false,
      "address": "0.0.0.0",
      "badge": "cameraman",
      "encryptedTextilePubkey": "1.0.0",
      "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
      "mailboxId": undefined,
      "name": "",
      "pending": true,
      "profilePicture": undefined,
      "publicKey": "!Lov3MyPianoPony",
      "state": "mobile",
      "status": "done",
      "textilePubkey": "https://croplands.org/app/a/confirm?t=",
      "typingState": "NOT_TYPING",
      "unreadCount": undefined,
      "userAccount": "66167549",
    },
  ],
}
`;

exports[`Friends.getFilteredFriends 0 1`] = `
Array [
  Object {
    "account": Object {
      "accountId": "Investment Account",
      "from": "./path/to/file",
      "fromMailboxId": "12345",
      "status": 400,
      "to": "path/to/file.ext",
      "toMailboxId": "^5.0.0",
    },
    "activeChat": true,
    "address": "192.168.1.5",
    "badge": "cameraman",
    "encryptedTextilePubkey": "v4.0.0-rc.4",
    "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
    "mailboxId": undefined,
    "name": "Jean-Philippe",
    "pending": false,
    "profilePicture": undefined,
    "publicKey": "YouarenotAllowed2Use",
    "state": "mobile",
    "status": undefined,
    "textilePubkey": "https://croplands.org/app/a/reset?token=",
    "typingState": "TYPING",
    "unreadCount": undefined,
    "userAccount": "30615264",
  },
  Object {
    "account": Object {
      "accountId": "Credit Card Account",
      "from": "C:\\\\\\\\path\\\\to\\\\folder\\\\",
      "fromMailboxId": "9876",
      "status": 404,
      "to": ".",
      "toMailboxId": "v1.2.4",
    },
    "activeChat": false,
    "address": "0.0.0.0",
    "badge": "cameraman",
    "encryptedTextilePubkey": "v4.0.0-rc.4",
    "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
    "mailboxId": undefined,
    "name": "Jean-Philippe",
    "pending": true,
    "profilePicture": undefined,
    "publicKey": "!Lov3MyPianoPony",
    "state": "mobile",
    "status": undefined,
    "textilePubkey": "https://api.telegram.org/",
    "typingState": "TYPING",
    "unreadCount": undefined,
    "userAccount": "66167549",
  },
  Object {
    "account": Object {
      "accountId": "Credit Card Account",
      "from": "path/to/file.ext",
      "fromMailboxId": "12345",
      "status": 200,
      "to": "path/to/file.ext",
      "toMailboxId": "v1.2.4",
    },
    "activeChat": true,
    "address": "0.0.0.0",
    "badge": "cameraman",
    "encryptedTextilePubkey": "4.0.0-beta1	",
    "item": "[\\"foo bar\\",  -0.353, \\"**text**\\", 4653]",
    "mailboxId": undefined,
    "name": "George",
    "pending": false,
    "profilePicture": undefined,
    "publicKey": "accessdenied4u",
    "state": "mobile",
    "status": undefined,
    "textilePubkey": "https://api.telegram.org/",
    "typingState": "TYPING",
    "unreadCount": undefined,
    "userAccount": "66167549",
  },
]
`;

exports[`Friends.getFilteredFriends 1 1`] = `Array []`;

exports[`Friends.getFilteredFriends 2 1`] = `Array []`;

exports[`Friends.getFilteredFriends 3 1`] = `
Array [
  Object {
    "account": Object {
      "accountId": "Checking Account",
      "from": "/path/to/file",
      "fromMailboxId": "9876",
      "status": 429,
      "to": "path/to/folder/",
      "toMailboxId": "^5.0.0",
    },
    "activeChat": true,
    "address": "0.0.0.0",
    "badge": undefined,
    "encryptedTextilePubkey": "4.0.0-beta1	",
    "item": "[-1, 0.5, 1, 2, 3, 4, 5]",
    "mailboxId": undefined,
    "name": "George",
    "pending": false,
    "profilePicture": "http://placeimg.com/640/480",
    "publicKey": "NoWiFi4you",
    "state": "offline",
    "status": "done",
    "textilePubkey": "https://croplands.org/app/a/reset?token=",
    "typingState": "NOT_TYPING",
    "unreadCount": undefined,
    "userAccount": "04079831",
  },
  Object {
    "account": Object {
      "accountId": "Investment Account",
      "from": "C:\\\\\\\\path\\\\to\\\\file.ext",
      "fromMailboxId": "9876",
      "status": 404,
      "to": "/path/to/file",
      "toMailboxId": "1.0.0",
    },
    "activeChat": true,
    "address": "0.0.0.0",
    "badge": undefined,
    "encryptedTextilePubkey": "^5.0.0",
    "item": "[\\"a\\", \\"b\\", \\"043\\", \\"holasenior\\"]",
    "mailboxId": undefined,
    "name": "Pierre Edouard",
    "pending": true,
    "profilePicture": "http://placeimg.com/640/480",
    "publicKey": "NoWiFi4you",
    "state": "offline",
    "status": "pending",
    "textilePubkey": "https://api.telegram.org/bot",
    "typingState": "NOT_TYPING",
    "unreadCount": undefined,
    "userAccount": "04079831",
  },
]
`;

exports[`Friends.getFilteredFriends 4 1`] = `Array []`;

exports[`Friends.getFilteredFriends 5 1`] = `Array []`;
